; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_meson-mx-sdio.c_meson_mx_mmc_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_meson-mx-sdio.c_meson_mx_mmc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.meson_mx_mmc_host = type { i32, i32, i32, i32 }
%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @meson_mx_mmc_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson_mx_mmc_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.meson_mx_mmc_host*, align 8
  %4 = alloca %struct.device*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.meson_mx_mmc_host* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.meson_mx_mmc_host* %6, %struct.meson_mx_mmc_host** %3, align 8
  %7 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %8 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.device* @mmc_dev(i32 %9)
  store %struct.device* %10, %struct.device** %4, align 8
  %11 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %12 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %11, i32 0, i32 3
  %13 = call i32 @del_timer_sync(i32* %12)
  %14 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %15 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @mmc_remove_host(i32 %16)
  %18 = load %struct.device*, %struct.device** %4, align 8
  %19 = call i32 @of_platform_device_destroy(%struct.device* %18, i32* null)
  %20 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %21 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @clk_disable_unprepare(i32 %22)
  %24 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %25 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @clk_disable_unprepare(i32 %26)
  %28 = load %struct.meson_mx_mmc_host*, %struct.meson_mx_mmc_host** %3, align 8
  %29 = getelementptr inbounds %struct.meson_mx_mmc_host, %struct.meson_mx_mmc_host* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @mmc_free_host(i32 %30)
  ret i32 0
}

declare dso_local %struct.meson_mx_mmc_host* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.device* @mmc_dev(i32) #1

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @mmc_remove_host(i32) #1

declare dso_local i32 @of_platform_device_destroy(%struct.device*, i32*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @mmc_free_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
